2014-02-12  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/msvc/Makefile:  cairo/pango terminals can be included in build
	without wxt. Support building with Qt5. Build qt files out of tree.
	Install gnuplot_qt. Required libraries can be installed in a common
	directory tree, referenced by LIBDIR. The individual package references
	GDDIR, LUADIR, CACADIR, CAIRODIR, and PDFDIR are now optional. Make
	the install target more similar to MinGW installs.

	* src/qtterminal/qt_term.cpp:  Add some more checks if the qt object
	is actually available. This is needed if some other terminal continues
	to send events even though it is no longer active.

	* src/win/winmain.c|h (ConsoleReadCh, stdin_pipe_reader):  Extract the 
	code to read a character from console and mapping it to a gnuplot code
	from ConsoleGetCh. Export stdin_pipe_reader.

	* src/win/wtext.c (TextStartEditing, TextStopEditing):  Make sure that
	calls to ShowCaret/HideCaret are balanced even if called if calls to
	these routines are not.

	* src/readline.c (msdos_getch):  Handle extended key codes returned
	from term->waitforinput.

2014-02-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/qt_term.cpp (qt_connectToServer):
	The timeout parameter in socket.waitForConnected() cannot be used to
	wait for an unready socket, as that returns an error immediately.
	Rewrite the delay loop using an explicit GP_SLEEP() instead.
	Also increase the overall timeout for the retry loop.

2014-02-09  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/QtGnuplotWidget.*:  QtGnuplotWidget emits a signal
	after a plot is done

2014-02-04  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/wxterminal/wxt_gui.h:  New configure option
	--with-wx-single-threaded forces the WXT_MONOTHREADED code option even
	if the platform otherwise would default to WXT_MULTITHREADED.
	This provides a workaround for reported problems using the wxt terminal